unpackaged/main/default/objects/ETIN_Claim__c/ETIN_Claim__c.object-meta.xml
<CustomObject>
    <label>Claim</label>
    <nameField>
        <displayFormat>CL-{000000}</displayFormat>
        <label>Claim Ref Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Claims</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>