unpackaged/main/default/objects/ETIN_Claim__c/fields/Accident_By__c.field-meta.xml
<CustomField>
    <fullName>Accident_By__c</fullName>
    <label>Accident By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Other Vehicle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>