unpackaged/main/default/objects/ETIN_Claim__c/fields/Accident_Date__c.field-meta.xml
<CustomField>
    <fullName>Accident_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Incident Date</label>
    <type>Date</type>
</CustomField>