unpackaged/main/default/objects/ETIN_Claim__c/fields/Cancel_Request__c.field-meta.xml
<CustomField>
    <fullName>Cancel_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cancel Request</label>
    <referenceTo>Correction_Cancel_Request__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>