unpackaged/main/default/objects/ETIN_Claim__c/fields/Chasses_Number__c.field-meta.xml
<CustomField>
    <fullName>Chasses_Number__c</fullName>
    <formula>Vehicle_Master__r.Chassis_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Chasses Number</label>
    <type>Text</type>
</CustomField>