unpackaged/main/default/objects/ETIN_Claim__c/fields/Child_Bill_Value__c.field-meta.xml
<CustomField>
    <fullName>Child_Bill_Value__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Child Bill Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>