unpackaged/main/default/objects/ETIN_Claim__c/fields/Claim_for__c.field-meta.xml
<CustomField>
    <fullName>Claim_for__c</fullName>
    <label>Claim for</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vehicle Theft</fullName>
            </value>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Scrapped Vehicle</fullName>
            </value>
            <value>
                <fullName>Scrapped Vehicle Theft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>