unpackaged/main/default/objects/ETIN_Claim__c/fields/Estimated_by__c.field-meta.xml
<CustomField>
    <fullName>Estimated_by__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated by</label>
    <length>50</length>
    <type>Text</type>
</CustomField>