unpackaged/main/default/objects/ETIN_Claim__c/fields/ETIN_Card_Number__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Card_Number__c</fullName>
    <formula>Insurance_Policy__r.Card_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Card Number</label>
    <type>Text</type>
</CustomField>