unpackaged/main/default/objects/ETIN_Claim__c/fields/ETIN_Claim_Status__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Claim_Status__c</fullName>
    <label>Claim Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Under Process</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Pending with Zone Coordinator</fullName>
            </value>
            <value>
                <fullName>Under Approval</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Admin Approval Pending</fullName>
                <isActive>false</isActive>
                <label>Admin Approval Pending</label>
            </value>
            <value>
                <fullName>Admin Approved</fullName>
                <isActive>false</isActive>
                <label>Admin Approved</label>
            </value>
            <value>
                <fullName>Admin Rejected</fullName>
                <isActive>false</isActive>
                <label>Admin Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>