unpackaged/main/default/objects/ETIN_Claim__c/fields/ETIN_Insurance_Partner__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Insurance_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Insurance Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Claim</relationshipLabel>
    <relationshipName>Claim</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>