unpackaged/main/default/objects/ETIN_Claim__c/fields/ETIN_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>ETIN_Rejection_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Rejection Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>