unpackaged/main/default/objects/ETIN_Claim__c/fields/ETVIN_Vehicle_Insurance__c.field-meta.xml
<CustomField>
    <fullName>ETVIN_Vehicle_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Insurance</label>
    <referenceTo>ETVIN_Vehicle_Insurance__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>