unpackaged/main/default/objects/ETIN_Claim__c/fields/Insured_Value__c.field-meta.xml
<CustomField>
    <fullName>Insured_Value__c</fullName>
    <label>Insured Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>