unpackaged/main/default/objects/ETIN_Claim__c/fields/Internal_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Number__c</fullName>
    <formula>Vehicle_Master__r.Internal_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Internal Number</label>
    <type>Text</type>
</CustomField>