unpackaged/main/default/objects/ETIN_Claim__c/fields/Plate_Number__c.field-meta.xml
<CustomField>
    <fullName>Plate_Number__c</fullName>
    <formula>Vehicle_Master__r.Plate_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Plate Number</label>
    <type>Text</type>
</CustomField>