unpackaged/main/default/objects/ETIN_Claim__c/fields/Policy_Number1__c.field-meta.xml
<CustomField>
    <fullName>Policy_Number1__c</fullName>
    <formula>Insurance_Policy__r.Insurance_Policy_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy Number</label>
    <type>Text</type>
</CustomField>