unpackaged/main/default/objects/ETIN_Claim__c/fields/Purchase_Date__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Date__c</fullName>
    <description>hide this field</description>
    <formula>Vehicle_Master__r.Purchase_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Date</label>
    <type>Date</type>
</CustomField>