unpackaged/main/default/objects/ETIN_Claim__c/fields/Purchase_Value__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Value__c</fullName>
    <description>Hide this field</description>
    <formula>Vehicle_Master__r.Purchase_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>