unpackaged/main/default/objects/ETIN_Claim__c/fields/Relation__c.field-meta.xml
<CustomField>
    <fullName>Relation__c</fullName>
    <formula>Insurance_Policy__r.Relation__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Relation</label>
    <type>Text</type>
</CustomField>