unpackaged/main/default/objects/ETIN_Claim__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>