unpackaged/main/default/objects/ETIN_Claim__c/fields/Vehicle_Master__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle</label>
    <referenceTo>Vehicle_Master__c</referenceTo>
    <relationshipLabel>Claims</relationshipLabel>
    <relationshipName>Claims</relationshipName>
    <type>Lookup</type>
</CustomField>