unpackaged/main/default/objects/ETIN_Claim__c/fields/VehicleMasterkey__c.field-meta.xml
<CustomField>
    <fullName>VehicleMasterkey__c</fullName>
    <formula>Vehicle_Master__r.Vehicle_Type_Desc__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VehicleMasterkey</label>
    <type>Text</type>
</CustomField>