unpackaged/main/default/objects/ETIN_Claim__c/recordTypes/ETIN_Inprogress_Claim.recordType-meta.xml
<RecordType>
    <fullName>ETIN_Inprogress_Claim</fullName>
    <active>true</active>
    <label>In progress Claim</label>
</RecordType>