unpackaged/main/default/objects/ETIN_Claim__c/recordTypes/General_Insurance.recordType-meta.xml
<RecordType>
    <fullName>General_Insurance</fullName>
    <active>true</active>
    <label>General Insurance</label>
</RecordType>