unpackaged/main/default/objects/ETIN_Claim__c/recordTypes/New_Claim.recordType-meta.xml
<RecordType>
    <fullName>New_Claim</fullName>
    <active>true</active>
    <label>Health Insurance</label>
</RecordType>