unpackaged/main/default/objects/ETIN_Claim__c/recordTypes/Vehicle_Insurance.recordType-meta.xml
<RecordType>
    <fullName>Vehicle_Insurance</fullName>
    <active>true</active>
    <label>Vehicle Insurance</label>
</RecordType>