unpackaged/main/default/objects/ETIN_Claim__c/validationRules/Accident_Date_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Accident_Date_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Accident_Date__c &gt;TODAY()</errorConditionFormula>
    <errorDisplayField>Accident_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Accident Date</errorMessage>
</ValidationRule>