unpackaged/main/default/objects/ETIN_Claim__c/listViews/All_Vehicle_Claims.listView-meta.xml
<ListView>
    <fullName>All_Vehicle_Claims</fullName>
    <columns>NAME</columns>
    <columns>ETIN_Insurance_Partner__c</columns>
    <columns>ETIN_Claim_Status__c</columns>
    <columns>Claim_Amount__c</columns>
    <columns>Claim_for__c</columns>
    <columns>Accident_Date__c</columns>
    <columns>Vehicle_Master__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All Vehicle Claims</label>
    <sharedTo>
        <role>Vehicle_Insurance_Admin</role>
    </sharedTo>
</ListView>